# BI-Database-MCP-Server

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/bi_database_mcp/: __init__.py  db_manager.py  security.py  server.py  tools.py
tests/: __init__.py  test_database.py
